# essay_generator

./: .gitignore  Makefile  README.md  config-dummy.yaml  pyproject.toml
app/: db.py  llm.py  main.py  schema.py  utils.py
app/tests/: test_db.py  test_main.py
